<resources>
    <string name="app_name">StackMoney</string>

    <string name="tab_text_1">Logowanie</string>
    <string name="tab_text_2">Rejestracja</string>

    <string name="prompt_login">Login</string>
    <string name="prompt_password">Hasło</string>
    <string name="prompt_repeat_password">Powtórz hasło</string>
    <string name="prompt_question">Pomocnicze pytanie</string>
    <string name="prompt_answer">Odpowiedź</string>

    <string name="textview_password_recovery">Odzyskiwanie hasła</string>

    <string name="error_invalid_password">Niepoprawne hasło</string>
    <string name="error_incorrect_password">Błędne hasło</string>
    <string name="error_field_required">Wymagane pole</string>
    <string name="error_invalid_login">Niepoprawny login</string>
    <string name="error_login_exists">Podany login już istnieje</string>
    <string name="error_create_user">Wystąpił błąd podczas tworzenia użytkownika</string>

    <string name="action_sign_in_short">Zaloguj</string>
    <string name="action_sign_up_short">Zarejestruj</string>
    <string name="action_sign_in">Zaloguj</string>>
    <string name="action_sign_up">Zarejestruj</string>
    <string name="action_add">Dodaj</string>
    <string name="action_update">Zaaktualizuj</string>
    <string name="action_settings">Ustawienia</string>
    <string name="action_logout">Wyloguj</string>>
    <string name="action_refresh">Odśwież</string>>

    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_main">StackMoney</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_categories">Kategorie</string>
    <string name="title_operations">Operacje</string>
    <string name="title_statistics">Statystyki</string>
    <string name="title_accounts">Konta</string>
    <string name="title_patterns">Szablony</string>
    <string name="title_planned">Zaplanowane</string>

    <string name="title_expenses">Wydatki</string>
    <string name="title_incomes">Wpływy</string>

    <string name="title_addCategory">Dodaj kategorię</string>
    <string name="title_addOperation">Dodaj operację</string>
    <string name="title_addAccount">Dodaj konto</string>

    <string name="title_editCategory">Edytuj kategorię</string>
    <string name="title_editOperation">Edytuj operację</string>
    <string name="title_editAccount">Edytuj konto</string>

    <string name="operation_amount">Kwota</string>
    <string name="operation_title">Nazwa</string>
    <string name="operation_date">Data</string>
    <string name="operation_description">Opis</string>
    <string name="operation_isExpense">Wydatek</string>
    <string name="operation_visibleInStatistics">Widoczna w statystykach</string>
    <string name="operation_account">Konto (ID)</string>
    <string name="operation_category">Kategoria (ID)</string>
    <string name="operation_create_pattern">Stwórz szablon</string>

    <string name="category_title">Nazwa kategorii</string>
    <string name="category_visibleInExpenses">Widoczna w wydatkach</string>
    <string name="category_visibleInIncomes">Widoczna we wpływach</string>
    <string name="category_parentCategory">Kategoria nadrzędna (ID)</string>
    <string name="category_iconID">Ikona (ID)</string>
    <string name="category_colorPicker">Wybierz kolor</string>

    <string name="account_title">Nazwa Konta</string>
    <string name="account_parentAccount">ID Konta nadrzędnego</string>
    <string name="account_colorID">ID koloru</string>
    <string name="account_colorPicker">Wybierz kolor</string>

    <string name="stats_start_date">Data początkowa</string>
    <string name="stats_end_date">Data końcowa</string>

</resources>